--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,11 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: hivammathur/setup-php@v2
+      - uses: shivammathur/setup-php@v2
         with:
           php-version: 8.1
           extensions: pdo_mysql
           coverage: none
           tools: composer:v2
       - run: composer install
-      - run: rsync -rzcEl . root@142.93.193.17:/var/www/html --exclude-from=".rsyncignore" --checksum --delete
+      - run: rsync -rzcEl . root@167.71.255.26:/var/www/html --exclude-from=".rsyncignore" --checksum --delete
