--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,5 @@ jobs:
           coverage: none
           tools: composer:v2
       - run: composer install
+      - run: ssh-keyscan -H 142.93.193.17 > ~/.ssh/known_hosts
       - run: rsync -rzcEl . root@167.71.255.26:/var/www/html --exclude-from=".rsyncignore" --checksum --delete
