--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,6 @@ jobs:
           coverage: none
           tools: composer:v2
       - run: composer install
-      - run: mkdir -p .ssh && touch .ssh/known_hosts
+      - run: mkdir -p ~/.ssh && touch ~/.ssh/known_hosts
       - run: ssh-keyscan -H 142.93.193.17 > ~/.ssh/known_hosts
       - run: rsync -rzcEl . root@167.71.255.26:/var/www/html --exclude-from=".rsyncignore" --checksum --delete
