--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,4 @@ jobs:
           coverage: none
           tools: composer:v2
       - run: composer install
-      - run: mkdir -p ~/.ssh && touch ~/.ssh/known_hosts
-      - run: ssh-keygen -R 142.93.193.17
-      - run: rsync -rzcEl . root@167.71.255.26:/var/www/html --exclude-from=".rsyncignore" --checksum --delete
+      - run: rsync -e 'ssh -o UserKnownHostsFile=/dev/null,StrictHostKeyChecking=no' -rzcEl . root@167.71.255.26:/var/www/html --exclude-from=".rsyncignore" --checksum --delete
