--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,10 @@ jobs:
           coverage: none
           tools: composer:v2
       - run: composer install
-      - run: rsync -e 'ssh -o UserKnownHostsFile=/dev/null,StrictHostKeyChecking=no' -rzcEl . root@142.93.193.17:/var/www/html --exclude-from=".rsyncignore" --checksum --delete
+      - name: Add identity file
+        run: echo "${{ secrets.PRIVATE_KEY }}" >> $HOME/deploy.key
+        env:
+          SSH_PRIVATE_KEY: ${{secrets.PLATFORMSH_PRIVATE_KEY}}
+      - name: Keyscan
+        run: ssh-keyscan 142.93.193.17 >> $HOME/.ssh/known_hosts
+      - run: rsync -e "ssh -i $HOME/deploy.key" -rzcEl . root@142.93.193.17:/var/www/html --exclude-from=".rsyncignore" --checksum --delete
