--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
         run: echo "${{ secrets.PRIVATE_KEY }}" >> $HOME/deploy.key
         env:
           SSH_PRIVATE_KEY: ${{secrets.PLATFORMSH_PRIVATE_KEY}}
+      - run: mkdir -p $HOME/.ssh && touch $HOME/.ssh/known_hosts
       - name: Keyscan
         run: ssh-keyscan 142.93.193.17 >> $HOME/.ssh/known_hosts
       - run: rsync -e "ssh -i $HOME/deploy.key" -rzcEl . root@142.93.193.17:/var/www/html --exclude-from=".rsyncignore" --checksum --delete
