--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,4 +28,4 @@ jobs:
       - name: Keyscan
         run: ssh-keyscan 142.93.193.17 >> $HOME/.ssh/known_hosts
       - run: rsync -e "ssh -i $HOME/deploy.key" -rzcElv . root@142.93.193.17:/var/www/html --exclude-from=".rsyncignore" --checksum --delete
-      - run: ssh -i $HOME/deploy.key root@142.93.193.17 'php /var/www/html/vendor/bin/drush deploy --yes'
+      - run: ssh -i $HOME/deploy.key root@142.93.193.17 'cd /var/www/html/ && php vendor/bin/drush deploy --yes'
