--- a/config/export/core.extension.yml
+++ b/config/export/core.extension.yml
@@ -1,6 +1,7 @@
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
 module:
+  admin_toolbar: 0
   automated_cron: 0
   big_pipe: 0
   block: 0
@@ -43,8 +44,8 @@ module:
   user: 0
   views_ui: 0
   views: 10
-  cicdprofile: 1000
+  standard: 1000
 theme:
   olivero: 0
   claro: 0
-profile: cicdprofile
+profile: standard
